Fix spacing differences

--- a/src/styles/ui.module.css
+++ b/src/styles/ui.module.css
@@ -217,6 +217,10 @@
 .toolbarGroupOfGroups {
   display: flex;
   margin: 0 var(--spacing-1);
+
+  &.noMargin {
+    margin: 0;
+  }
 }
 
 .toolbarToggleSingleGroup:first-of-type .toolbarToggleItem:only-child,
